<resources>
    <string name="app_name">AccountAuthenticationDemo</string>
    <string name="my_account">My Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="display_name">Display Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="you_are_logged_in_as">You are logged in as:</string>
    <string name="log_out">log out</string>
</resources>
