<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">


    <ImageView
        android:id="@+id/image_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-135dp"
        android:contentDescription="@string/login"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:srcCompat="@drawable/login" />


    <EditText
        android:id="@+id/log_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:drawableStart="@drawable/ic_action_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor" />


    <Button
        android:id="@+id/log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_gray"
        android:paddingHorizontal="30dp"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/log_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:textColor="@color/titleColor"-->
    <!--        android:textSize="30sp"-->
    <!--        android:layout_marginTop="150dp"-->

    <!--        android:text="@string/login_to_your_account" />-->
</RelativeLayout>