<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/image_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-135dp"
        android:contentDescription="@string/register"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:srcCompat="@drawable/register" />



    <EditText
        android:id="@+id/reg_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:drawableStart="@drawable/ic_action_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor" />


    <EditText
        android:id="@+id/reg_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor" />

    <EditText
        android:id="@+id/reg_password_again"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/input_text"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor" />


    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password_again"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:background="@drawable/button_gray"
        android:paddingHorizontal="30dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/yellow"
        android:textSize="12sp" />

    <ProgressBar
        android:id="@+id/reg_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />


</RelativeLayout>